--- a/wp-content/uploads/oceanwp-webfonts-css/15cc36c5cb7f3a9f44e6cb278252a1b8.css
+++ b/wp-content/uploads/oceanwp-webfonts-css/15cc36c5cb7f3a9f44e6cb278252a1b8.css
@@ -1,1 +1,1 @@
-@font-face {  font-family: 'Akronim';  font-style: normal;  font-weight: 400;  font-display: swap;  src: url(//localhost/wp-content/uploads/oceanwp-webfonts/fdN-9sqWtWZZlHRpygd7lA.ttf) format('truetype');}
+@font-face {  font-family: 'Akronim';  font-style: normal;  font-weight: 400;  font-display: swap;  src: url(https://wrecky305.github.io/wrecky/wp-content/uploads/oceanwp-webfonts/fdN-9sqWtWZZlHRpygd7lA.ttf) format('truetype');}
