--- a/wp-content/plugins/elementor/assets/lib/font-awesome/css/solid.css
+++ b/wp-content/plugins/elementor/assets/lib/font-awesome/css/solid.css
@@ -7,8 +7,8 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url("../webfonts/fa-solid-900.eot");
-  src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+  src: url("https://wrecky305.github.io/wrecky/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot");
+  src: url("https://wrecky305.github.io/wrecky/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot#iefix") format("embedded-opentype"), url("https://wrecky305.github.io/wrecky/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("https://wrecky305.github.io/wrecky/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff") format("woff"), url("https://wrecky305.github.io/wrecky/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("https://wrecky305.github.io/wrecky/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
 
 .fa,
 .fas {
